[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
dependencies = [
    "requests>=2.27.1",
    "beautifulsoup4>=4.10.0",
    "python-dateutil>=2.8.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.1.0",
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
kippnewark.cmd = "python easyiep_sync/historical_exports.py"
kippnewark.env_file = "kippnewark.env"
kippnewark.site_packages = true
kippcamden.cmd = "python easyiep_sync/historical_exports.py"
kippcamden.env_file = "kippcamden.env"
kippcamden.site_packages = true
